--- a/bootstrap2.html
+++ b/bootstrap2.html
@@ -9,6 +9,83 @@
   <body>
     <h1>Playing with Boostrap Grid and Nav</h1>
 
+        <!-- with .navbar, you can easily create a navigation bar in bootstrap -->
+     <!-- navbar-expand will change the navigation to horizontal above the given
+      breakpoint -->
+    <nav class="navbar navbar-expand-lg bg-info">
+        <!-- if you want to add a logo or company name, there's a separate class for that-->
+        <a href="#" class="navbar-brand">Company Name</a>
+        <ul class="navbar-nav">
+            <li class="nav-item bg-primary">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+            <!-- you can create dropdown menus in bootstrap -->
+            <li class="nav-item bg-secondary dropdown">
+                <!-- the id links it to the aria-labelledBy on the dropdown menu
+                 the bs-toggle is the custom property the javascript looks for
+                 aria-expanded tells this to start hidden
+                 the class dropdown-toggle makes the little triangle appear
+                 the class dropdown on the list item makes that item hold the dropdown
+                 menu when it appears
+                 -->
+                <a class="nav-link dropsown-toggle" 
+                    id="aboutDropdown"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                    href="#">About</a>
+
+                <!-- this will appear when we click on the dropdown toggle -->
+                <div class="dropdown-menu" aria-labelledby="aboutDropdown">
+                    <a class="dropdown-item" href="#">Things</a>
+                    <a class="dropdown-item" href="#">Stuff</a>
+                    <a class="dropdown-item" href="#">More</a>
+                </div>
+            </li>
+            <li class="nav-item bg-danger">
+                <a class="nav-link" href="#">Content</a>
+            </li>
+
+            <!-- you can add a search bar to your nav with a form -->
+            <form class="d-flex">
+                <!-- this search won't actually work, it just looks pretty
+                 any form needs an action and a method, and to make it work,
+                 you would have to program the search function -->
+                <input class="form-control" type="text" placeholder="Search">
+                <button type="submit" class="btn btn-dark">Search</button>
+            </form>
+        </ul>
+    </nav>
+
+    <!-- a second nav to demonstrate the hamburger button behaviour -->
+    <nav class="navbar navbar-expand-md">
+        <!-- this button will be hidden at larger sizes, based on the expand breakpoint -->
+        <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#togglerNav"
+            aria-controls="togglerNav"
+            aria-label="Toggle navigation">
+
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- the button above will target the menu below, based on the ID -->
+        <div class="collapse navbar-collapse" id="togglerNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Hidden Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">More Stuff</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Another Item</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <main class="bg-info container-lg">
         <!-- bootstrap's grid is a lot like HTML tables
          you define rows, and columns inside rows-->
